[package]
authors = [""]
edition = "2021"
name = "napi-tokei"
version = "0.1.0"
main = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
tokei = "12.1.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
